add function to html file and create app.js

--- a/index.html
+++ b/index.html
@@ -8,5 +8,23 @@
 </head>
 <body>
     <h1> How Web Works Exercise </h1>
+    <h2> MOVIES LIST! </h2>
+        <form id="new-movie" > 
+            <div class="form-group">
+                <label for="title">Movies Title</label>
+                <input type="text" id="title" placeholder="Type movie name" />
+            </div>
+            <div class="form-group">
+                <label for="rating">Rate</label>
+                <input type="number"  min="0" max="10" id="rating" placeholder=" 0 - 10"/>
+            </div>
+            <div class="form-group">
+                <button type="submit">Submit</button>
+            </div>
+            
+        </form>
+    <script src="app.js">
+
+    </script>
 </body>
 </html>
